--- a/new.ipynb
+++ b/new.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello hello hello hello hello \n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"hello \" * 5\n",
-    "print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -55,10 +37,10 @@
     "from bs4 import BeautifulSoup\n",
     "from datetime import datetime\n",
     "import vk_api\n",
-    "import sw\n",
-    "with open(\"key_vk\") as file:\n",
-    "    token = file.read()\n",
     "\n",
+    "# with open(\"key_vk\") as file:\n",
+    "#     token = file.read()\n",
+    "token = \"vk1.a.wfNiL2QZScLcMc-QzMxpYctjWkuBNjjvzxg3PtU7bpy5Q0pK6xG1N6hVeioJUTP15VdHx_Q2rSQUz-8Yx4bEcSC9zBN1g8rUFBS0YhN1sp0awhte-VYRHEedAEw0a18VCQf2okjRQAmG78XkxSY_kKERvrUMK_FpT_pGRxOPhcyqIWpzR4faTu9r5QAvtU8Haft_TTJeDWEABeQn-AngqQ\"\n",
     "vk = vk_api.VkApi(token = token)\n",
     "\n",
     "url = \"http://www.cbr.ru/scripts/XML_daily.asp?\"\n",
@@ -92,27 +74,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting lxml\n",
-      "  Using cached lxml-4.9.2.tar.gz (3.7 MB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hInstalling collected packages: lxml\n",
-      "\u001b[33m  DEPRECATION: lxml is being installed using the legacy 'setup.py install' method, because it does not have a 'pyproject.toml' and the 'wheel' package is not installed. pip 23.1 will enforce this behaviour change. A possible replacement is to enable the '--use-pep517' option. Discussion can be found at https://github.com/pypa/pip/issues/8559\u001b[0m\u001b[33m\n",
-      "\u001b[0m  Running setup.py install for lxml ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed lxml-4.9.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "/Users/pattycha/Library/Python/3.11/lib/python/site-packages/bs4/builder/__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'user_id' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 39\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     38\u001b[0m         responce \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39munknown message\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 39\u001b[0m vk\u001b[39m.\u001b[39mmessages\u001b[39m.\u001b[39msend(user_id\u001b[39m=\u001b[39muser_id,random_id\u001b[39m=\u001b[39mrandom_id,message \u001b[39m=\u001b[39m response)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'user_id' is not defined"
      ]
     }
    ],
    "source": [
-    "pip install lxml"
+    "import random\n",
+    "import requests\n",
+    "import vk_api\n",
+    "from vk_api.longpoll import VkLongPoll, VkEventType \n",
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
+    "\n",
+    "url = \"http://www.cbr.ru/scripts/XML_daily.asp?\"\n",
+    "today = datetime.today()\n",
+    "today = today.strftime(\"%d/%m/%Y\")\n",
+    "payload = {\"date_req\": today}\n",
+    "response = requests.get(url, params=payload)\n",
+    "xml = BeautifulSoup(response.content, 'lxml')\n",
+    "def get_course(currency):\n",
+    "    return str(xml.find(\"valute\", {'id': currency}).value.text)\n",
+    "\n",
+    "with open(\"key_vk\") as file:\n",
+    "    token = file.read()\n",
+    "\n",
+    "vk_session = vk_api.VkApi(token=token)\n",
+    "vk = vk_session.get_api()\n",
+    "longpoll = VkLongPoll(vk_session)\n",
+    "\n",
+    "for event in longpoll.listen():\n",
+    "    if event.type == VkEventType.MESSAGE_NEW and event.to_me:\n",
+    "        msg = event.text.lower()\n",
+    "        user_id = event.user_id\n",
+    "        random_id = random.randint(1,10**10)\n",
+    "        if msg == '-k':\n",
+    "            response = \"{0} рублей за 1 доллар\\n{1} рублей за 1 евро\\n\" \\\n",
+    "                       \"{2}рублей за 10 юаней\\n {3}рублей за 1 фунт\".format(\n",
+    "                get_course(\"R01235\"),\n",
+    "                get_course(\"R01239\"),\n",
+    "                get_course(\"R01375\"),\n",
+    "                get_course(\"R01035\"),\n",
+    "            )\n",
+    "        else:\n",
+    "            responce = \"unknown message\"\n",
+    "        vk.messages.send(user_id=user_id,random_id=random_id,message = response)"
    ]
   },
   {
