--- a/new.ipynb
+++ b/new.ipynb
@@ -22,15 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unsupported type for add\n",
-      "Videocard, ценой 1000, весом 0.5 кг\n"
+      "Videocard, Minitor, ценой 2.0, весом 0.1 кг\n"
      ]
     }
    ],
@@ -49,13 +48,41 @@
     "            print(\"Warning: unsupported type for add\") \n",
     "            item_add_result = self\n",
     "        return item_add_result\n",
+    "    def __sub__(self,other):\n",
+    "        if isinstance(other, Item):\n",
+    "            item_add_result = Item(f\"{self.name}, {other.name}\",self.price-other.price,self.weight-other.weight)\n",
+    "        elif isinstance(other, (int, float)):\n",
+    "            item_add_result = self.price - other\n",
+    "        else:\n",
+    "            print(\"Warning: unsupported type for add\") \n",
+    "            item_add_result = self\n",
+    "        return item_add_result\n",
+    "    def __mul__(self,other):\n",
+    "        if isinstance(other, Item):\n",
+    "            item_add_result = Item(f\"{self.name}, {other.name}\",self.price*other.price,self.weight*other.weight)\n",
+    "        elif isinstance(other, (int, float)):\n",
+    "            item_add_result = self.price * other\n",
+    "        else:\n",
+    "            print(\"Warning: unsupported type for add\") \n",
+    "            item_add_result = self\n",
+    "        return item_add_result\n",
+    "    def __truediv__(self,other):\n",
+    "        if isinstance(other, Item):\n",
+    "            item_add_result = Item(f\"{self.name}, {other.name}\",self.price/other.price,self.weight/other.weight)\n",
+    "        elif isinstance(other, (int, float)):\n",
+    "            item_add_result = self.price / other\n",
+    "        else:\n",
+    "            print(\"Warning: unsupported type for add\") \n",
+    "            item_add_result = self\n",
+    "        return item_add_result\n",
+    "    \n",
     "    def __str__(self):\n",
     "        return f\"{self.name}, ценой {self.price}, весом {self.weight} кг\"\n",
     "\n",
     "\n",
     "item_1 = Item(\"Videocard\",1000,0.5)\n",
     "item_2 = Item(\"Minitor\",500,5)\n",
-    "total_price = item_1 + [1,2,4,4]\n",
+    "total_price = item_1/item_2\n",
     "print(total_price)"
    ]
   }
