--- a/new.ipynb
+++ b/new.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
    "source": [
     "from redis import Redis\n",
-    "r = Redis(host='51.250.65.169', port=6379, db=0, decode_responses=True)\n"
+    "r = Redis(host='51.250.65.169', port=6379, db=0, decode_responses=True)\n",
+    "r.set('key','123')\n",
+    "print(r.get('key'))"
    ]
   },
   {
@@ -18,7 +28,8 @@
    "source": [
     "https://sql-ex.ru/learn_exercises.php?LN=1\n",
     "https://sql-ex.ru/learn_exercises.php?LN=2\n",
-    "https://sql-ex.ru/dmlexercises.php?N=1"
+    "https://sql-ex.ru/dmlexercises.php?N=1\n",
+    "https://sql-ex.ru/dmlexercises.php?N=5"
    ]
   }
  ],
